--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test": "npm run test:unit -- --run"
   },
   "dependencies": {
-    "@deno/svelte-adapter": "^0.1.0"
+    "@deno/svelte-adapter": "^0.1.0",
+    "@sveltejs/adapter-node": "^5.2.13"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
